# AVATARARTS

./: .aider.chat.history.md  .aider.input.history  .gitignore  00_CURRENT_FOCUS.md  00_MASTER_CONSOLIDATION_PLAN.md  ADVANCED_DECLUTTER_ANALYSIS.md  AEO_SEO_Content_Optimization.md  AI_CLI_TOOLS_RECOMMENDATIONS.md  AI_CLI_TOOLS_USAGE_GUIDE.md  AVATARARTS-scan-audio-2026-01-17.csv  AVATARARTS-scan-docs-2026-01-17.csv  AVATARARTS-scan-images-2026-01-17.csv  AVATARARTS-scan-other-2026-01-17.csv  AVATARARTS-scan-videos-2026-01-17.csv  AVATARARTS_2026_STRATEGIC_KNOWLEDGE_BASE_ANALYSIS.md  AVATARARTS_COMPLETE_HANDOFF.md  AVATARARTS_COMPLETE_KNOWLEDGE_BASE.md  AVATARARTS_COMPLETE_SYSTEM_SUMMARY.md  AVATARARTS_Ecosystem_Comprehensive_Guide.html  AVATARARTS_FINAL_INDEX.md  AVATARARTS_WORKSPACE_CONSOLIDATION_HANDOFF.md  CLEANED_SUMMARY.md  COMPLETE_EVOLUTION_SUMMARY.md  COMPLETE_HANDOFF_DOCUMENT.md  COMPLETE_PRODUCT_PORTFOLIO.md  COMPREHENSIVE_ASSESSMENT_ENHANCEMENT_RECOMMENDATIONS.md  COMPREHENSIVE_REVENUE_SAAS_SCAN_COMPLETE.md  CONFIGURATION_DIRECTORIES_ANALYSIS.md  CONFIGURATION_ECOSYSTEM_ENHANCEMENT.md  CONVERSATION_SUMMARY_UPWORK_AUTOMATION.md  CREATIVE_DOC_PORTAL.md  DECLUTTER_COMPLETE.md  DECLUTTER_FINAL_COMPLETE.md  DECLUTTER_PLAN.md  DIRECTORY_STRUCTURE_REPORT_POST_REORG.md  DOCUMENTATION_VARIATIONS.md  EMPIRE_UPWORK_LAUNCHER.md  ENHANCED_PROFILE_CONTEXT.md  EVOLUTION_ROADMAP_2026.md  FINAL_REORGANIZATION_STATUS.md  (+91 more)
.github/: copilot-instructions.md
00_ACTIVE/: index.html
01_TOOLS/: index.html
02_DOCUMENTATION/: ACTIONABLE_SUGGESTIONS.md  ADDITIONAL_FILES_MOVED_SUMMARY.md  ADDITIONAL_FILES_TO_MOVE.md  ALL_ADDITIONAL_FILES_TO_MOVE.md  CLEANUP_PLAN.md  COMPLETE_FILES_ORGANIZATION_FINAL.md  COMPLETE_FOLDER_FILE_LIST.md  COMPLETE_INDEX.md  COMPLETE_ORGANIZATION_SUMMARY.md  COMPLETE_SETUP_GUIDE.md  COMPREHENSIVE_ORGANIZATION_REPORT.md  CONTENT_AWARENESS_IMPLEMENTATION_GUIDE.md  DOCUMENTATION_STYLES_COMPLETE_2026-01-02.md  EMPIRE_ACTIVATION_GUIDE.md  EVOLUTION_ROADMAP.md  FILES_MOVED_SUMMARY.md  FILES_ORGANIZATION_COMPLETE.md  GROK.md  (+46 more)
notebookLM/: .env.example  .gitignore  CHANGELOG.md  CLI_REFERENCE.md  CREATION_COMPLETE.md  IMPLEMENTATION_PROGRESS.md  README.md  SESSION_SUMMARY.md  UPGRADE_PLAN.md  UPGRADE_SUMMARY.md  pyproject.toml  requirements-dev.txt  requirements.txt
notebookLM/scripts/: install.sh
notebookLM/src/notebooklm/: __init__.py  __main__.py  __version__.py  exceptions.py
notebookLM/src/notebooklm/cli/: __init__.py  main.py
notebookLM/src/notebooklm/cli/commands/: __init__.py
notebookLM/src/notebooklm/core/: __init__.py  auth.py  browser.py
notebookLM/src/notebooklm/managers/: __init__.py
notebookLM/src/notebooklm/models/: __init__.py  config.py  notebook.py  profile.py  query.py
notebookLM/src/notebooklm/utils/: __init__.py  config.py  decorators.py  helpers.py  logger.py  validators.py
notebookLM/tests/: EXECUTION_LOG.md  TEST_RESULTS.md  __init__.py  conftest.py  manual_test_auth.py  manual_test_browser.py  quick_test.py  run_all_tests.py  run_all_tests_auto.py
notebookLM/tests/integration/: __init__.py
notebookLM/tests/unit/: __init__.py
(+10688 files in other folders)
